@@ -3,7 +3,10 @@ package fr.jjj.conductor.model;
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
 
-import java.io.IOException;
+import java.io.*;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.List;
 
 /**
  * Created by Jaunais on 02/09/2014.
@@ -17,6 +20,7 @@ public class PlayerHandler {
     private String defaultOptions;
 
     private Resource.ItemArgFormat itemArgFormat;
+    private OutputStream outputStream;
 
     public enum Action{
         VOLUP,VOLDOWN,NEXT,PREV,PAUSE,STOP;
@@ -30,12 +34,34 @@ public class PlayerHandler {
 
     public void play(MediaItem item)
     {
-        String itemArg=item.getMediaSource().getItemArg(item.getDescription().getTitle(),itemArgFormat);
-        String command=playerCommand+" "+defaultOptions+" \""+itemArg+"\"";
-        log.info("Player command: "+command);
+        List<String> command=new ArrayList<String>();
+        command.add(playerCommand);
+        command.addAll(Arrays.asList(defaultOptions.split(" ")));
+        command.add(item.getMediaSource().getItemArg(item.getDescription().getTitle(),itemArgFormat));
+        log.info("Player command: "+command.toArray());
         try {
-            Runtime.getRuntime().exec(command);
+            ProcessBuilder pb = new ProcessBuilder(command.toArray(new String[command.size()]));
+            Process p = pb.start();
+            outputStream = p.getOutputStream();
+            final InputStream inputStream = p.getInputStream();
+            new Thread(new Runnable(){
+                @Override
+                public void run() {
+                    BufferedReader br = new BufferedReader(new InputStreamReader(inputStream));
+                    String line = "";
+                    try {
+                        while ((line = br.readLine()) != null) {
+                            log.info(line);
+                        }
+                    } catch (IOException e) {
+                        e.printStackTrace();
+                    }
+                }
+            }).start();
+            p.waitFor();
         } catch (IOException e) {
+            e.printStackTrace();
+        } catch (InterruptedException e) {
             e.printStackTrace();
         }
 
